vpc.tf
################################################
# VPC in General Region
################################################
resource "aws_vpc" "general-vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = var.vpc_tags
}
